restart script